added player themer in kaltura_examples with CDN refrence
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@930 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/PlayerThemer/tests/Player_AutoThemer.html
+++ b/modules/PlayerThemer/tests/Player_AutoThemer.html
@@ -43,7 +43,7 @@
 <br/>
 
 <div id="cnn_maintoplive">
-	<div style="width:300px;float:left">
+	<div style="width:300px;float:left;padding:5px;">
 		<span style="font-size:14px"> Works with existing html:</span>
 		<span style="font-size:14px"> <br />
 		1) Design your player in dreamweaver / html5 editor of your choice around an html5 embed tag.<br />  
@@ -130,7 +130,7 @@
 			<div id="cnnCVP1">
 				<div class="cnn_mtt1img">
 					<img src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"						 				
-						>											
+						style="height:234px;width:416px;" >											
 				</div>						
 				<div  class="centerPlayButton cnn_mtt1plybttn" id="cnnCVP2">
 					<div id="play_button">
