* updated SWFObject example to use bb clip
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@948 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/SWFObject_1.5.html
+++ b/modules/KalturaSupport/tests/SWFObject_1.5.html
@@ -15,7 +15,7 @@
 	
  <script type="text/javascript">
  mw.ready(function(){
-	 var kaltura_swf = new SWFObject("http://www.kaltura.com/index.php/kwidget/cache_st/1272070736/wid/_210202/uiconf_id/1366372/entry_id/0_hyg8mx5i", "", "400", "365", "9", "#ffffff");        
+	 var kaltura_swf = new SWFObject("http://www.kaltura.com/kwidget/wid/_37945/entry_id/0_xqncw5pv/uiconf_id/1748602", "kaltura_player_0_xqncw5pv", "620", "348", "9", "#000000"); 
 	 kaltura_swf.addParam("wmode", "opaque");        
 	 kaltura_swf.addParam("allowScriptAccess", "always");        
 	 kaltura_swf.addParam("allowFullScreen", "TRUE");        
