--- a/modules/KalturaSupport/tests/FallForwardPlaylist.html
+++ b/modules/KalturaSupport/tests/FallForwardPlaylist.html
@@ -10,8 +10,8 @@
 -->
   
 <script type="text/javascript">
-	if( document.URL.indexOf('forceMobileSafari') != -1 ){		
-		mw.setConfig( 'forceMobileSafari' , true );
+	if( document.URL.indexOf('forceMobileHTML5') != -1 ){		
+		mw.setConfig( 'forceMobileHTML5' , true );
 	}			
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );
 	mw.setConfig( 'kalturaAnalyticsCallbackLog', function( monitorEvent ){
@@ -22,7 +22,7 @@
 </head>
 <body>
 <h2> Fall forward: ( kaltura embed code on iPad / iPhone ) + analytics </h2>
-<a href="?forceMobileSafari"> Force Mobile Safari</a> for testing with desktop chrome and safari.
+<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br />
 
 <p>Multiple Playlists</p>
