playlist fixes for android
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@966 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -22,7 +22,7 @@
 </script>
 </head>
 <body>
-<h2> Fall forward: ( kaltura embed code on iPad / iPhone ) + analytics </h2>
+<h2> Fall forward: ( kaltura embed code on iPad / iPhone / Android ) + analytics </h2>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br />
 <!-- 			
