* basic support for bumper videos via kaltura uiconf
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1050 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -18,6 +18,7 @@
       1. VAST Module - player with a Pre-roll, Overlay , Post-roll with companion
       ad in HTML from different ad servers
     </h3>
+  <a href="?forceMobileHTML5"> Force Mobile HTML5</a> 
     <ul>
       <li>Preroll ad is served from Doubleclick DFP, <br>
 	  ad Tag is: <a href=
