--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -43,26 +43,7 @@
       </li>
     </ul>
     <div style="float: left;">
-      <object width="400" height="330" id="kaltura_player" name=
-      "kaltura_player" type="application/x-shockwave-flash" allowfullscreen=
-      "true" allownetworking="all" allowscriptaccess="always" xmlns:dc=
-      "http://purl.org/dc/terms/" xmlns:media=
-      "http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource=
-      "http://www.kaltura.com/index.php/kwidget/cache_st/1283458337/wid/_355452/uiconf_id/2191911/entry_id/1_if6x9de6"
-      data=
-      "http://www.kaltura.com/index.php/kwidget/cache_st/1283458337/wid/_355452/uiconf_id/2191911/entry_id/1_if6x9de6">
-      <param name="allowFullScreen" value="true">
-        <param name="allowNetworking" value="all">
-        <param name="allowScriptAccess" value="always">
-        <param name="bgcolor" value="#000000">
-        <param name="flashVars" value="&amp;">
-
-        <param name="movie" value=
-        "http://www.kaltura.com/index.php/kwidget/cache_st/1283458337/wid/_355452/uiconf_id/2191911/entry_id/1_if6x9de6">
-         <a rel="media:thumbnail" href=
-        "http://cdnbakmi.kaltura.com/p/355452/sp/35545200/thumbnail/entry_id/1_if6x9de6/width/120/height/90/bgcolor/000000/type/2">
-        </a>
-      </object>
+     <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="FolgersCoffe.mpeg" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
     </div>
     <div style="float: none; clear: both;">
       <br>
@@ -78,6 +59,7 @@
       the companion ad, which is a blue rectangle.
     </div><br>
     <br>
+    <!-- 
     <h3>
       2. VAST Module - a player with a Preroll with companion ad in flash
     </h3>preroll and companion ads are served from Liverail.<br>
@@ -116,6 +98,6 @@
 	<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="268" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f" data="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/355452/sp/35545200/thumbnail/entry_id/1_3sqhh72f/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="Nip_Tuck_S01_E01_Full" /> <span property="media:width" content="400" /><span property="media:height" content="268" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
 	
 	<BR><BR><BR><BR><BR><BR>
-
+ 	-->
   </body>
 </html>
