improved VAST support infrastructure
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1063 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -50,7 +50,7 @@
 
     <div style=
     "background: lightBlue none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; width: 728px; height: 90px;"
-    id="divid1">
+    id="adCompanion1">
       <h4>
         This is a place holder for companion ads size 728x90
       </h4>When Doubleclick pre-roll will be played, this will be replaced with
