fixed play binding event
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1064 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -3,12 +3,20 @@
 <head>
 <title>Player sources</title>
 
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
+<!--   <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script> -->
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+<script type="text/javascript">
+	mw.ready(function(){
+		$j('#myVid').bind('play', function(){
+			mw.log('play event' );
+		});	
+	});
+</script>
 </head>
 <body>
 
 
-<video poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg"
+<video id="myVid" poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg"
 	 duration="10:53" preload="auto">
   <source type="video/webm" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.webm" />
   <source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_iphone.m4v" />
