--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -6,21 +6,60 @@
 </script>
 </head>
 <body>
-	<h3> Kaltura iFrame Player </h3>
+	<h3> Kaltura iFrame Resizable Player + iFrame cross-domain player api </h3>
 	<span style="width:300px;float:left">
 		Widget id: <input id="kwidgetid" size="15" value="_243342"><br />
 		Entry id: <input id="kentryid" size="15" value="0_swup5zao"> <br />
 	</span>
 	<input id="displayIframe" type="button" value="Update iframe"></input>
+	<input id="triggerPlay" type="button" value="Play"></input>
 	<br/>
-	<div id="resizable" style="width:400px;height:300px;">		
-		<iframe style="width:100%;height:100%" id="iframeTarget" src="../../../mwEmbedFrame.php?kEntryId=0_swup5zao&kwidgetid=_243342&debug=true"></iframe>
-	<div/>
+		<br/>
+			<br/>	<br/>
+	<div id="resizable" style="padding: 2.5em;width:400px;height:300px;border-style:solid;border-width:5px;">					
+		<iframe class="kaltura_player" style="width:100%;height:100%" id="iframePlayer" src="../../../mwEmbedFrame.php?kentryid=0_swup5zao&kwidgetid=_243342&debug=true"></iframe>		 		
+	<div/>	
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/themes/base/jquery-ui.css" type="text/css" media="all" />
+	
+	<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
 	
 	<script type="text/javascript">
-	
+	mw.ready(function(){		
+		mw.load( 'mw.IFramePlayerApiClient',function(){		
+			$j('#resizable').resizable();
+
+			$j('#displayIframe').click(function(){ 
+				$('#resizable').empty().append(
+					$j('<iframe />').attr({
+						"id" : "iframePlayer",
+						"src" : '../../../mwEmbedFrame.php?kentryid=' + $('#kentryid').val()					 
+							+ '&kwidgetid=' + $('#kwidgetid').val() + '&debug=true'
+					})
+					.css({
+						'width' : '100%',
+						'height' : '100%'
+					})
+				);				
+				bindIframePlayer();							
+			});		
+			bindIframePlayer();	
+		});
+		function bindIframePlayer(){
+			// Bind the iFrame:
+			var urlLocal = mw.parseUri( document.URL );			
+			$j( '#iframePlayer' ).iFramePlayer({
+				'targetOrigin' : urlLocal.protocol + '://' + urlLocal.authority
+			});
+			
+			// Bind the controls: 
+			$j( '#triggerPlay' ).click(function(){								
+				$('#iframePlayer').get(0).play();
+			});
+		}	
+	});	 
 	</script>
 </body>
 </html>
