removed extra class removed specialized playerThemer call ( will have playerThemer extend .embedPlayer()
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1113 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/PlayerThemer/tests/vampSample/index.html
+++ b/modules/PlayerThemer/tests/vampSample/index.html
@@ -14,7 +14,7 @@
 </ul>
 <div id="main">
 	<div id="myVidInteface" class="vamp">
-		<video class="PlayerThemer" poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg" duration="10:53" preload="auto">
+		<video poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg" duration="10:53" preload="auto">
 			<source type="video/webm" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.webm" />
 			<source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_iphone.m4v" />
 			<source type="video/ogg" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.ogv" />
@@ -33,8 +33,7 @@
 			</li>
 			<li class="volume-control"><div class="volume-control-level"></div></li>
 			<li class="fullscreen-control"></li>
-		</ul>
-		
+		</ul>		
 	</div>
 </div>
 <div id="footer">
@@ -44,7 +43,7 @@
 <script type="text/javascript" src="../../../../mwEmbedLoader.js"></script>
 <!--   <script type="text/javascript" src="assets/js/vamp.js"></script> -->
 <script type="text/javascript">
-	$('#myVidInteface').playerThemer();
+	$('#myVidInteface').embedPlayer();
 </script>
 </body>
 </html>
