vamp skin style updates iframe updates refactored html5 fallforward support isMobileHTML5() -> isHTML5FallForwardNative()
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1131 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForwardPlaylist.html
+++ b/modules/KalturaSupport/tests/FallForwardPlaylist.html
@@ -14,7 +14,7 @@
 		mw.setConfig( 'forceMobileHTML5' , true );
 	}			
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );
-	mw.setConfig( 'kalturaAnalyticsCallbackLog', function( monitorEvent ){
+	mw.setConfig( 'Kaltura.AnalyticsCallback', function( monitorEvent ){
 		$j('#analyticsLog').append( monitorEvent + "\n");
 	});
 
