--- a/modules/KalturaSupport/tests/Bumper_playlist.html
+++ b/modules/KalturaSupport/tests/Bumper_playlist.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>New Video Test</title>
-<!-- <script type="text/javascript" src="http://html5.kaltura.org/js"></script>  --> 
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script> 
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
+<!-- <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>  --> 
 </head>
 
 <body>
