--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -13,11 +13,14 @@
 	</span>
 	<input id="displayIframe" type="button" value="Update iframe"></input>
 	<input id="triggerPlay" type="button" value="Play"></input>
+	<input id="triggerPause" type="button" value="Pause"></input>
+	<input id="alertTime" type="button" value="Alert currentTime"></input>
+	<input id="seek10" type="button" value="Set currentTime to 10"></input>
 	<br/>
 		<br/>
 			<br/>	<br/>
 	<div id="resizable" style="padding: 2.5em;width:400px;height:300px;border-style:solid;border-width:5px;">					
-		<iframe class="kaltura_player" style="width:100%;height:100%" id="iframePlayer" src="../../../mwEmbedFrame.php?kentryid=0_swup5zao&kwidgetid=_243342&debug=true"></iframe>		 		
+				 		
 	<div/>	
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
@@ -28,35 +31,54 @@
 	
 	<script type="text/javascript">
 	mw.ready(function(){		
-		mw.load( 'mw.IFramePlayerApiClient',function(){		
+		mw.load( [ 'mw.EmbedPlayerNative' , '$j.postMessage' , 'mw.IFramePlayerApiClient' ] , function(){			
 			$j('#resizable').resizable();
-
-			$j('#displayIframe').click(function(){ 
+			
+			// Setup iframe rewrite for new source selection:  
+			$j('#displayIframe').click(function(){ 				
+				appendIframe();		
+				bindIframePlayer();							
+			});
+			
+			function appendIframe(){
 				$('#resizable').empty().append(
 					$j('<iframe />').attr({
-						"id" : "iframePlayer",
+						"id" : "vid",
 						"src" : '../../../mwEmbedFrame.php?kentryid=' + $('#kentryid').val()					 
 							+ '&kwidgetid=' + $('#kwidgetid').val() + '&debug=true'
+							// add the parent domain to the frame location:  
+							+ '#' + encodeURIComponent( document.location.href )
 					})
 					.css({
 						'width' : '100%',
-						'height' : '100%'
-					})
-				);				
-				bindIframePlayer();							
-			});		
-			bindIframePlayer();	
+						'height' : '100%',
+						'border' : '0px'				
+					})			
+				);
+				// run append iframe directly
+			};
+			appendIframe();
+			bindIframePlayer();						
 		});
 		function bindIframePlayer(){
-			// Bind the iFrame:
-			var urlLocal = mw.parseUri( document.URL );			
-			$j( '#iframePlayer' ).iFramePlayer({
-				'targetOrigin' : urlLocal.protocol + '://' + urlLocal.authority
-			});
+			// Bind the iFrame player:				
+			$j( '#vid' ).iFramePlayer();
 			
-			// Bind the controls: 
+			// Now we can use all the normal player calls bindings and attributes: 
 			$j( '#triggerPlay' ).click(function(){								
-				$('#iframePlayer').get(0).play();
+				$('#vid').get(0).play();
+			});
+
+			$j( '#triggerPause' ).click(function(){
+				$j( '#vid' ).get(0).pause();
+			});
+
+			$j('#alertTime').click(function(){
+				alert( $j( '#vid').get(0).currentTime );
+			});
+
+			$j('#seek10').click( function(){
+				$j( '#vid').get(0).currentTime = 10;
 			});
 		}	
 	});	 
