--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -2,7 +2,8 @@
 <head>
 <title>Fall forward Iframe</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+<!--  <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> -->
+<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
   
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
