fixed iframe player proxy cross domain domain listing
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1152 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -3,7 +3,8 @@
 <head>
 <title>Player sources</title>
 
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
+<!--  <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script> -->
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
 </head>
 <body>
 
