* restored some revisions lost in the whitespace sync * fixed iframe compatibility old version of jQuery
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1180 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -3,8 +3,9 @@
 <title>Fall forward Iframe</title>
 
 <!--  <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> -->
+<script type="text/javascript" src="http://wurzelzwerg.104.6rtl.com/misc/jquery.js?3"></script>
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
-  
+
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
 </script>
