some iframe refactoring ( partially broken ) setup a system for delivering image / file link to limited capacity devices. fixes to the ad system around companion ads
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1203 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -48,8 +48,8 @@
 				$('#iframeHolder').empty().append(
 					$j('<iframe />').attr({
 						"id" : "vid",
-						"src" : '../../../mwEmbedFrame.php?kentryid=' + $('#kentryid').val()					 
-							+ '&kwidgetid=' + $('#kwidgetid').val() + '&debug=true'
+						"src" : '../../../mwEmbedFrame.php/wid/' + $('#kwidgetid').val() 
+							+ '/entry_id/' + $('#kentryid').val() + '/?debug=true'
 							// add the parent domain to the frame location:  
 							+ '#' + encodeURIComponent( document.location.href )
 					})
