improved iframe to handle direct output of media assets, this should speed up delivery and be more cache friendly
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1214 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -96,5 +96,8 @@
 -->	
 	<BR><BR><BR><BR><BR><BR>
  	<script src="../../../mwEmbedLoader.js" type="text/javascript"></script>
+ 	<script type="text/javascript">
+ 		mw.setConfig( 'Kaltura.IframeRewrite', true );
+ 	</script>
   </body>
 </html>
