--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -4,7 +4,7 @@
 
 <!--  <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> -->
 <script type="text/javascript" src="http://wurzelzwerg.104.6rtl.com/misc/jquery.js?3"></script>
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true"></script>
 
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
