restored basic functionality to iframe apiProxy
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1238 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -51,7 +51,9 @@
 						"src" : '../../../mwEmbedFrame.php/wid/' + $('#kwidgetid').val() 
 							+ '/entry_id/' + $('#kentryid').val() + '/?debug=true'
 							// add the parent domain to the frame location:  
-							+ '#' + JSON.stringify( { 'parentUrl' : document.location.href } )
+							+ '#' + encodeURIComponent( 
+									JSON.stringify( { 'parentUrl' : document.location.href } )
+								)
 					})
 					.css({
 						'width' : '100%',
