added minor blackberry blacklist link fix.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1241 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/tests/Player_MediaRss.html
+++ b/modules/Playlist/tests/Player_MediaRss.html
@@ -30,11 +30,20 @@
 			'type' : 'application/rss+xml',
 			'layout' : 'horizontal'
 		});
+
+		$j('#mediaRssMobile').playlist({
+			'src' : "kalturaInterviewPlaylist.xml",
+			'type' : 'application/rss+xml',
+			'interfaceType' : 'jquerymobile'
+		});
 	});
 </script>
 </head>
 <body>
 <h2> Sample MediaRss Playlist  </h2>
+
+iPad / Android style mobile interface:
+ <div style="width:320px;height:356px" id="mediaRssMobile"> </div>
 <br />
 
 Sample Media Rss ( <a href="kalturaInterviewPlaylist.xml">kalturaInterviewPlay.xml</a> ) Vertical
