minor fix for dynamic embed variables to match url variables
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1246 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/SWFObject_2.2.html
+++ b/modules/KalturaSupport/tests/SWFObject_2.2.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h2>Fall forward from Flash to html5</h2>
+<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<br />
+
 <div id="videoPlayerTarget"></div>
 <script type="text/javascript">
 	// Embed video-player
