--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -3,7 +3,7 @@
 <title>Fall forward Iframe</title>
 
 <!--  <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> -->
-<script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
 
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
