updated mobile safari to mobile html5 fixed playlist display for html5 browsers
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1252 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Player_Analytics.html
+++ b/modules/KalturaSupport/tests/Player_Analytics.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <h2> Fall forward: ( kaltura embed code on iPad / iPhone ) + analytics </h2>
-<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
+<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 
 <br />
 
