--- a/modules/KalturaSupport/tests/SWFObject_2.2.html
+++ b/modules/KalturaSupport/tests/SWFObject_2.2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Fall forward from Flash to html5</h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<a href="?forceMobileHTML5">Force HTML5</a> for testing with desktop html5 browsers
 <br />
 <div id="videoPlayerTarget"></div>
 <script type="text/javascript">
