--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -21,8 +21,8 @@
 </script>
 </head>
 <body>
-<h2> Fall forward: ( kaltura embed code on iPad / iPhone / Android ) + analytics </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<h2> Fall forward: ( kaltura embed code on iPad / iPhone / Android ) + analytics </h2>	
+<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
 <br />
  <!--				
 <object id="kaltura_player"  classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="300" height="200" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1282234454/wid/_301982/uiconf_id/2093242/entry_id/0_lzunfqi3" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1282234454/wid/_301982/uiconf_id/2093242/entry_id/0_lzunfqi3" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="300" height="200" src="http://www.kaltura.com/index.php/kwidget/cache_st/1282234454/wid/_301982/uiconf_id/2093242/entry_id/0_lzunfqi3" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1282234454/wid/_301982/uiconf_id/2093242/entry_id/0_lzunfqi3" allowfullscreen="true" ></embed></object> 					
