--- a/modules/Playlist/tests/Player_MediaRss.html
+++ b/modules/Playlist/tests/Player_MediaRss.html
@@ -34,7 +34,7 @@
 		$j('#mediaRssMobile').playlist({
 			'src' : "kalturaInterviewPlaylist.xml",
 			'type' : 'application/rss+xml',
-			'interfaceType' : 'jquerymobile'
+			'interface' : 'mobile'
 		});
 	});
 </script>
