updated hash iframe object passing fixed jquery conflict mwEmbed sequencer updates
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1260 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/tests/Player_MediaRss.html
+++ b/modules/Playlist/tests/Player_MediaRss.html
@@ -34,7 +34,7 @@
 		$j('#mediaRssMobile').playlist({
 			'src' : "kalturaInterviewPlaylist.xml",
 			'type' : 'application/rss+xml',
-			'interface' : 'mobile'
+			'theme' : 'mobile'
 		});
 	});
 </script>
