--- a/modules/KalturaSupport/tests/SWFObject_1.5.html
+++ b/modules/KalturaSupport/tests/SWFObject_1.5.html
@@ -3,26 +3,29 @@
  
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
- <script type="text/javascript"  src="SWFObject.1.5.js"></script> 
+<script type="text/javascript"  src="SWFObject.1.5.js"></script> 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>  
 
+<script type="text/javascript">
+	mw.setConfig( 'Kaltura.IframeRewrite', true );
+</script> 
 <title>swfOjbect fallforward test</title> 
  
 </head> 
 <body > 
-	<div id="targetDiv"></div>
+	<div id="kaltura_wrapper_1_b31ue6o7"></div>
 	
-	<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>  
 	
- <script type="text/javascript">
- mw.ready(function(){
-	 var kaltura_swf = new SWFObject("http://www.kaltura.com/kwidget/wid/_37945/entry_id/0_xqncw5pv/uiconf_id/1748602", "kaltura_player_0_xqncw5pv", "620", "348", "9", "#000000"); 
-	 kaltura_swf.addParam("wmode", "opaque");        
-	 kaltura_swf.addParam("allowScriptAccess", "always");        
-	 kaltura_swf.addParam("allowFullScreen", "TRUE");        
-	 kaltura_swf.addParam("allowNetworking", "all");        
-	 kaltura_swf.addParam("flashVars", "externalInterfaceDisabled=0&uid=2");
-	 kaltura_swf.write("targetDiv");
- })
- </script>   
+     <div id="kaltura_wrapper_1_b31ue6o7" class="kaltura_wrapper" style=""><a href="http://corp.kaltura.com/download">open source video</a><a href="http://corp.kaltura.com/technology/">video platform</a></div><div style="width: 600px;" class="poweredByKaltura"><!--<div><a target="_blank" href="http://drupal.kaltura.org">Video Module</a> by <a target="_blank" href="http://corp.kaltura.com">Kaltura</a></div>--></div><script type="text/javascript">
+              var kaltura_swf = new SWFObject("http://www.kaltura.com/kwidget/wid/_376531/entry_id/1_b31ue6o7/uiconf_id/2793541", "kaltura_player_1_b31ue6o7", "600", "380", "9", "#000000");
+              kaltura_swf.addParam("wmode", "opaque");
+              kaltura_swf.addParam("flashVars", "uid=Anonymous&externalInterfaceDisabled=false&layoutId=fullLarge&                pd_original_url=http%3A%2F%2Fwurzelsepp.104.6rtl.com%2Fdrupaltest2%2F");
+              kaltura_swf.addParam("allowScriptAccess", "always");
+              kaltura_swf.addParam("allowFullScreen", "TRUE");
+              kaltura_swf.addParam("allowNetworking", "all");
+              kaltura_swf.write("kaltura_wrapper_1_b31ue6o7");</script>
+    </div>
+
 </body> 
 </html>
