fixed some IE issues with @@ tags also a extra comma was removed
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1263 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -98,6 +98,7 @@
  	<script src="../../../mwEmbedLoader.js" type="text/javascript"></script>
  	<script type="text/javascript">
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
+ 		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
  	</script>
   </body>
 </html>
