fixed iframe javascript bridge ( iFrameResizableTest.html now working ) added stubs for Internet archive support.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1269 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -95,10 +95,11 @@
 	<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="268" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f" data="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1283468449/wid/_355452/uiconf_id/2192721/entry_id/1_3sqhh72f" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/355452/sp/35545200/thumbnail/entry_id/1_3sqhh72f/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="Nip_Tuck_S01_E01_Full" /> <span property="media:width" content="400" /><span property="media:height" content="268" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
 -->	
 	<BR><BR><BR><BR><BR><BR>
- 	<script src="../../../mwEmbedLoader.js" type="text/javascript"></script>
+ 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
  	<script type="text/javascript">
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
+ 		mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
  	</script>
   </body>
 </html>
