* added watermark support module * added uiConfFile var, need to move $uiConfFeatures over to $uiConfFile
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1270 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Native_Bindings.html
+++ b/modules/EmbedPlayer/tests/Player_Native_Bindings.html
@@ -99,7 +99,7 @@ function setLogging(event, isActive, message) {
 
 $(document).ready(function() {
 
-	vid =  $('#myVid');
+  var vid =  $('#myVid');
 
   // setup checkboxes to control logging
   $(mediaEvents).each(function (i, e) {
