fixed commons api example in timed text
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1273 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/TimedText/tests/Player_Timed_Text.html
+++ b/modules/TimedText/tests/Player_Timed_Text.html
@@ -27,7 +27,7 @@ Click on the little lower right "CC" icon to expose the timed text
 	 	<video
 	 		style="width:512px;height:288px"
 	 		durationHint="7:52"
-	 		titleKey="Yochai_Benkler_-_On_Autonomy,_Control_and_Cultural_Experience.ogg"
+	 		apititlekey="Yochai_Benkler_-_On_Autonomy,_Control_and_Cultural_Experience.ogg"
 	 		apiProvider="commons"
 	 		class="kskin"></video>
  	<td valign="top">
