--- a/modules/KalturaSupport/tests/SWFObject_1.5_JQuery1.2_iframeRewrite.html
+++ b/modules/KalturaSupport/tests/SWFObject_1.5_JQuery1.2_iframeRewrite.html
@@ -14,13 +14,14 @@
  
 </head> 
 <body > 
-<h2> jQuery 1.2 with iframe embed: </h2>
+<h2> jQuery 1.2 with Iframe embed: </h2>
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
 <br />
 	<div id="kaltura_wrapper_1_b31ue6o7"></div>
 	
 	
-     <div id="kaltura_wrapper_1_b31ue6o7" class="kaltura_wrapper" style=""><a href="http://corp.kaltura.com/download">open source video</a><a href="http://corp.kaltura.com/technology/">video platform</a></div><div style="width: 600px;" class="poweredByKaltura"><!--<div><a target="_blank" href="http://drupal.kaltura.org">Video Module</a> by <a target="_blank" href="http://corp.kaltura.com">Kaltura</a></div>--></div><script type="text/javascript">
+     <div id="kaltura_wrapper_1_b31ue6o7" class="kaltura_wrapper" style="">
+     <script type="text/javascript">
               var kaltura_swf = new SWFObject("http://www.kaltura.com/index.php/kwidget/cache_st/1272070736/wid/_210202/uiconf_id/1366372/entry_id/0_hyg8mx5i", "kaltura_player_1_b31ue6o7", "600", "380", "9", "#000000");
               kaltura_swf.addParam("wmode", "opaque");
               kaltura_swf.addParam("flashVars", "uid=Anonymous&externalInterfaceDisabled=false&layoutId=fullLarge&pd_original_url=http%3A%2F%2Fwurzelsepp.104.6rtl.com%2Fdrupaltest2%2F");
